<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        app:titleTextColor="#131313"
        android:background="@color/puzzle_hilite"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="30dp"
        android:layout_weight="1">




    <TextView
            android:textColor="#F33F3F"
            android:text="@string/main_title"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="27dip"
            android:textSize="45dp" />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/puzzle_hilite"
            android:textColor="@color/colorBlue"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:text="@string/continue_label"
            android:layout_marginBottom="7dip"
            />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/new_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/colorBlue"
            android:text="@string/new_game_label"
            android:layout_marginBottom="7dip"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/puzzle_hilite"
            />
        <com.google.android.material.button.MaterialButton

            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:textColor="@color/colorBlue"
            android:layout_height="40dp"
            android:text="@string/about_label"
            android:layout_marginBottom="7dip"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/puzzle_hilite"
            />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/rules_button"
            android:layout_width="match_parent"
            android:textColor="@color/colorBlue"
            android:layout_height="40dp"
            android:text="@string/more_label"
            android:layout_marginBottom="7dip"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/puzzle_hilite"
            />

        <com.google.android.material.button.MaterialButton

            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorBlue"
            android:text="@string/exit_label"
            android:backgroundTint="@color/puzzle_hilite"
            />
    </LinearLayout>

</LinearLayout>