<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/puzzle_hilite">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="0dp"
        android:contentDescription="Back"
        android:src="@drawable/ic_round_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sudoku_rules_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/puzzle_foreground"
        android:textAlignment="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/back_arrow"/>

    <ImageView
        android:id="@+id/illustrative_image"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/sudoku_example_image"
        android:src="@drawable/a1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/rules_content"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:text="@string/sudoku_rules"
        android:textSize="20sp"
        android:textColor="@color/puzzle_foreground"
        app:layout_constraintTop_toBottomOf="@+id/illustrative_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/youtube_button"
        app:layout_constraintVertical_bias="0"/>

    <Button
        android:id="@+id/youtube_button"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/watch_video"
        android:textSize="30dp"
        android:backgroundTint="@color/colorBlue"
        app:layout_constraintTop_toBottomOf="@+id/rules_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="10dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
